src/objects/participants__c.object
<CustomObject>
    <fields>
        <fullName>Kommentar__c</fullName>
        <label>Kommentar</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Kontakt__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Kontakt</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Teilnehmer</relationshipLabel>
        <relationshipName>Teilnehmer</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Kontakt__r.FirstName &amp; &quot; &quot; &amp; Kontakt__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teilnahmestatus__c</fullName>
        <label>Teilnahmestatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MeetingParticipantStatsu</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Teilnehmer_Rolle__c</fullName>
        <label>Teilnehmer Rolle</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MitgliederRolle</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>meeting__c</fullName>
        <label>Vorstandssitzung</label>
        <referenceTo>meeting__c</referenceTo>
        <relationshipLabel>Teilnehmer</relationshipLabel>
        <relationshipName>Teilnehmer</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Teilnehmer</label>
    <nameField>
        <displayFormat>TN.{000}</displayFormat>
        <label>Teilnehmer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teilnehmer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>